played with some css

--- a/Myweb/main.html
+++ b/Myweb/main.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mymain.css">
+    <link rel="stylesheet" href="/CSS/mymain.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Hello swamy</h1>
     <h2>I hope you are doing great!</h2>
     <input type="text" placeholder="Enter you name" value="name">
-    <div>
+    <div class="aq">
         <h1> Header 1</h1>
         <h2> Header 2</h2>
     </div>
