--- a/Myweb/main.html
+++ b/Myweb/main.html
@@ -7,62 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello swamy</h1>
-    <h2>I hope you are doing great!</h2>
-    <input type="text" placeholder="Enter you name" value="name">
-    <div class="aq">
-        <h1> Header 1</h1>
-        <h2> Header 2</h2>
-    </div>
-    <ul>
-        <li>Love</li>
-        <li>Fun</li>
-        <li>Relax</li>
-    </ul>
-    <ol>
-        <li>Moneyz</li>
-        <li>Gamezz</li>
-        <li>Girlzz</li>
-    </ol>
-    <table>
-        <thead>
-        <caption>Hello Game</caption>
-        <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Sex</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Swamy</td>
-            <td>20</td>
-            <td>Male</td>
-            
-        </tr>
-        <tr>
-            <td>Muthu</td>
-            <td>22</td>
-            <td>Male</td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <td>Love</td>
-            <td>Inf</td>
-            <td>female</td>
-        </tr>
-    </tfoot>
-    </table>
-    <form>
-        <label for="fname">Firstname: </label>
-        <input type="text" id="fname" name="Firstname">  <br>
-        <label for="Sname">Secondname: </label>
-        <input type="text" id="Sname" name="lastname"> <br>
-        <input type="button" value="Submit"> <br>
-        <input type="checkbox"> <br>
-        
+    <!-- Learned the display proeprty in CSS -->
+    <!-- <div>Swamy nadar</div>
+    <span>My name</span> -->
 
-    </form>
 </body>
 </html>
