--- a/Myweb/main.html
+++ b/Myweb/main.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/mymain.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&family=Lilita+One&family=Phudu:wght@400;500&family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- Learned the display proeprty in CSS -->
