--- a/Myweb/main.html
+++ b/Myweb/main.html
@@ -15,9 +15,19 @@
     <!-- <div>Swamy nadar</div>
     <span>My name</span> -->
 
-    <p>Hello i love money and honey I hope you got something to work and move in with your life 
+    <!-- <p>Hello i love money and honey I hope you got something to work and move in with your life 
         My mom is tend to be more anger than any fewer it awesome and love it to be it
-    </p>
-<h1> Swamy loves you guys </h1>
+    </p> -->
+    <h1> Swamy loves you guys </h1>
+    <div class="my1">
+        <p>Hellos wmay Hello i love money and honey I hope you got something to work and move in with your life 
+            My mom is tend to be more anger than any fewer it awesome and love it to be it </p>
+    </div>
+
+    <div class="my2">
+        <p>Hellos wmay Hello i love money and honey I hope you got something to work and move in with your life 
+            My mom is tend to be more anger than any fewer it awesome and love it to be it</p>
+    </div>
+
 </body>
 </html>
