Adding the display property

--- a/Myweb/main.html
+++ b/Myweb/main.html
@@ -17,17 +17,17 @@
 
     <!-- <p>Hello i love money and honey I hope you got something to work and move in with your life 
         My mom is tend to be more anger than any fewer it awesome and love it to be it
-    </p> -->
-    <h1> Swamy loves you guys </h1>
+     </p> -->
+    <!-- <h1> Swamy loves you guys </h1>
     <div class="my1">
         <p>Hellos wmay Hello i love money and honey I hope you got something to work and move in with your life 
             My mom is tend to be more anger than any fewer it awesome and love it to be it </p>
     </div>
 
     <div class="my2">
-        <p>Hellos wmay Hello i love money and honey I hope you got something to work and move in with your life 
-            My mom is tend to be more anger than any fewer it awesome and love it to be it</p>
-    </div>
+        <p>Hellos wmay Hello i love money and honey I hope you got something to work and move in with your life  -->
+            <!-- My mom is tend to be more anger than any fewer it awesome and love it to be it</p> --> 
+    <!-- </div>
     <p>Hello i love money and honey I hope you got something to work and move in with your life 
         My mom is tend to be more anger than any fewer it awesome and love it to be it
     </p>
@@ -42,7 +42,11 @@
     </div>
     <div id="M2">
         
-    </div>
+    </div> -->
+
+    <div>div</div>
+    <span>span</span>
+
 
 </body>
 </html>
