--- a/Myweb/main.html
+++ b/Myweb/main.html
@@ -11,40 +11,9 @@
 
 </head>
 <body>
-    <!-- Learned the display proeprty in CSS -->
-    <!-- <div>Swamy nadar</div>
-    <span>My name</span> -->
+    
 
-    <!-- <p>Hello i love money and honey I hope you got something to work and move in with your life 
-        My mom is tend to be more anger than any fewer it awesome and love it to be it
-     </p> -->
-    <!-- <h1> Swamy loves you guys </h1>
-    <div class="my1">
-        <p>Hellos wmay Hello i love money and honey I hope you got something to work and move in with your life 
-            My mom is tend to be more anger than any fewer it awesome and love it to be it </p>
-    </div>
-
-    <div class="my2">
-        <p>Hellos wmay Hello i love money and honey I hope you got something to work and move in with your life  -->
-            <!-- My mom is tend to be more anger than any fewer it awesome and love it to be it</p> --> 
-    <!-- </div>
-    <p>Hello i love money and honey I hope you got something to work and move in with your life 
-        My mom is tend to be more anger than any fewer it awesome and love it to be it
-    </p>
-    <p>Hello i love money and honey I hope you got something to work and move in with your life 
-        My mom is tend to be more anger than any fewer it awesome and love it to be it
-    </p>
-    <p>Hello i love money and honey I hope you got something to work and move in with your life 
-        My mom is tend to be more anger than any fewer it awesome and love it to be it
-    </p>
-    <div ID="M1">
-
-    </div>
-    <div id="M2">
-        
-    </div> -->
-
-    <div>div</div>
+    <div>divz</div>
     <span>span</span>
 
 
