--- a/Myweb/main.html
+++ b/Myweb/main.html
@@ -12,9 +12,14 @@
 </head>
 <body>
     
-
-    <div>divz</div>
-    <span>span</span>
+    <!-- learning flex bos in css -->
+    <div class="container">
+        <div class="box" id="box1">1</div>
+        <div class="box" id="box2">2</div> 
+        <div class="box" id="box3">3</div> 
+        <div class="box" id="box4">4</div> 
+    
+    </div>
 
 
 </body>
